# DiFfRG_current

./: .clangd  .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  COMMIT_LOG.md  Dockerfile  Documentation.html  README.md  build.sh  clear_all.sh  compile_commands.json  config  config_docker  install.sh  quadrature_integrator.hh  run_tests.sh  setup_docker.sh  submodules.sh  third_party.txt  update_DiFfRG.sh
DiFfRG/: CMakeLists.txt  CMakePresets.json  Config.cmake.in
DiFfRG/Mathematica/DiFfRG/: .gitignore  CodeTools.m  CodeTools.nb  DiFfRG.m  DiFfRG.nb  PacletInfo.wl
DiFfRG/Mathematica/DiFfRG/CodeTools/: Directory.m  Export.m  MakeKernel.m  Regulator.m  TemplateParameterGeneration.m  Utils.m
DiFfRG/Mathematica/DiFfRG/Tests/: CodeToolsTests.m  DirectoryTests.m  ExportTests.m  MakeKernelSecondOrderADTests.m  MakeKernelTests.m  PhysicsTests.m  RegulatorTests.m  TemplateParameterGenerationTests.m  TestRunner.m  init.m
DiFfRG/Mathematica/DiFfRG/modules/: MakeKernel.m
DiFfRG/cmake/: CMakeLists.txt  CPM.cmake  InstallDiFfRG.cmake  autodiff.patch  finish.sh  install_bundled.cmake  setup_build_system.cmake  setup_build_system.cmake___  setup_build_system__.cmake  setup_targets.cmake  verify_install.cmake
DiFfRG/documentation/: Doxyfile.in  DoxygenLayout.xml  toc.md
DiFfRG/documentation/getting_started/: installation.md  models.md  structure.md
DiFfRG/documentation/tutorials/: tut1.md  tut2.md  tut3.md
DiFfRG/include/: CMakeLists.txt
DiFfRG/include/DiFfRG/: DiFfRG.hh
DiFfRG/include/DiFfRG/common/: complex_math.hh  configuration_helper.hh  csv_reader.hh  cuda_prefix.hh  documentation.hh  eigen.hh  external_data_interpolator.hh  fixed_string.hh  init.hh  initialize.hh  interpolation.hh  json.hh  kokkos.hh  math.hh  minimization.hh  mpi.hh  polynomials.hh  root_finding.hh  tbb.hh  tuples.hh  types.hh  utils.hh
DiFfRG/include/DiFfRG/discretization/: discretization.hh
DiFfRG/include/DiFfRG/model/: ad.hh  component_descriptor.hh  fv_boundaries.hh  model.hh  numflux.hh
DiFfRG/include/DiFfRG/physics/: ConvexRegulators.nb  flow_equations.hh  integration.hh  integration_finiteT.hh  interpolation.hh  loop_integrals.hh  physics.hh  regulators.hh  thermodynamics.hh  utils.hh
DiFfRG/include/DiFfRG/timestepping/: abstract_timestepper.hh  boost_abm.hh  boost_rk.hh  explicit_euler.hh  implicit_euler.hh  rk.hh  sundials_arkode.hh  sundials_ida.hh  sundials_ida_arkode.hh  sundials_ida_boost_abm.hh  sundials_ida_boost_rk.hh  timestepping.hh  trbdf2.hh
DiFfRG/include/hdf5lib/: dataset.hh  dataspace.hh  datatype.hh  file.hh  group.hh  handle.hh  hdf5.hh
DiFfRG/include/hdf5lib/detail/: hdf5_capi.hh  vlen_string.hh
DiFfRG/include/qmc/: qmc.hpp
DiFfRG/python/: .gitignore  build.sh  pyproject.toml
DiFfRG/python/DiFfRG/: file_io.py  plot.py  utilities.py
DiFfRG/python/DiFfRG.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
DiFfRG/src/: CMakeLists.txt
DiFfRG/src/DiFfRG/common/: configuration_helper.cc  csv_reader.cc  cuda_prefix.cu  eigen.cc  external_data_interpolator.cc  init.cc  initialize.cc  interpolation.cc  json.cc  math.cc  mpi.cc  polynomials.cc  utils.cc
DiFfRG/src/DiFfRG/model/: model.cc
DiFfRG/src/DiFfRG/physics/: flow_equations.cc
DiFfRG/src/DiFfRG/timestepping/: boost_abm.cc  boost_rk.cc  explicit_euler.cc  implicit_euler.cc  rk.cc  sundials_arkode.cc  sundials_ida.cc  sundials_ida_arkode.cc  sundials_ida_boost_abm.cc  sundials_ida_boost_rk.cc  trbdf2.cc
DiFfRG/tests/: CMakeLists.txt
DiFfRG/tests/boilerplate/: kt_models.hh  models.hh  timestepping.hh
DiFfRG/tests/common/: CMakeLists.txt  autodiff.cc  complex_autodiff.cc  configuration_helper.cc  tbb.cc  test_autodiff.cc  test_complex_autodiff.cc  test_cpu_complex_autodiff.cc  test_gpu_autodiff.cu  test_gpu_complex.cu  test_gpu_complex_autodiff.cu
DiFfRG/tests/common/quadrature/: CMakeLists.txt  matsubara.cc  test_diagonalization.cc  test_matsubara.cc  test_quadrature.cc  test_quadrature_provider.cc
DiFfRG/tests/discretization/: CMakeLists.txt  EoM_finding.cc  affine_constraint_metadata.cc  eom_finding.cc  mesh.cc  mesh_adaptor.cc  mesh_configuration_test.cpp  test_EoM_finding.cc
DiFfRG/tests/hdf5lib/: CMakeLists.txt  wrapper.cc
DiFfRG/tests/model/: CMakeLists.txt  ad.cc  component_descriptor.cc  fv_boundaries.cc
DiFfRG/tests/physics/: CMakeLists.txt  loop_integrals.cc  test_loop_integrals.cc
DiFfRG/tests/timestepping/: CMakeLists.txt  explicit_euler.cc  implicit_euler.cc  sundials_ida.cc  sundials_ida_boost.cc  test_sundials_arkode.cc  test_trbdf2.cc
Examples/FourFermi/: .gitignore  CMakeLists.txt  DiFfRG  Four-Fermion.m  Four-Fermion.nb  FourFermi.cc  model.hh  parameter.json  phasediagram.ipynb
Examples/FourFermi/external_data/: etaA.txt  etaQ.txt  gAqbq1.txt  kGeV.txt  t.txt
Examples/FourFermi/flows/: CMakeLists.txt  def.hh  flows.cc  flows.hh
Examples/ONfiniteT/: .clang-format  .gitignore  CG.cc  CMakeLists.txt  LDG.cc  ON.nb  build.sh  dDG.cc  form.set  model.hh  model_LDG.hh  parameter.json  phasediagram.ipynb  run_all.sh
Examples/ONfiniteT/flows/: CMakeLists.txt  def.hh  flows.cc  flows.hh
Examples/QuarkMesonLPAprime/: .gitignore  CMakeLists.txt  QM.cc  QuarkMesonLPAprime.m  QuarkMesonLPAprime.nb  model.hh  parameter.json  plot.ipynb
Examples/QuarkMesonLPAprime/flows/: CMakeLists.txt  flows.cc  flows.hh
Examples/YangMills/Full/: .gitignore  CMakeLists.txt  Yang-Mills.cc  Yang-Mills.ipynb  Yang-Mills.m  Yang-Mills.nb  build.sh  model.hh  parameter.json  tuning.hh
Examples/YangMills/SP/: .gitignore  CMakeLists.txt  DiFfRG  Yang-Mills.cc  Yang-Mills.ipynb  Yang-Mills.m  Yang-Mills.nb  build.sh  model.hh  parameter.json  plot.jl  tuning.hh
Tutorials/tut1/: CMakeLists.txt  build.sh  model.hh  parameter.json  tut1.cc
Tutorials/tut2/: CMakeLists.txt  model.hh  parameter.json  tut2.cc
dependencies/boost/: CMakeLists.txt  cstdfloat_limits.hpp.diff  download_modules.sh
dependencies/general/: CMakeLists.txt  Eigen3Config.cmake.in
dependencies/petsc/: CMakeLists.txt
tbb_fail/: CMakeLists.txt  main.cc
(+752 files in other folders)
